tests/snapshots/integration_tests__thick_arrow.snap
---
source: tests/integration_tests.rs
expression: r4.output
---
┌───┐        ┌───┐
│ A │═══════▶│ B │
└───┘        └───┘
