tests/snapshots/integration_tests__web_architecture_simplified.snap
---
source: tests/integration_tests.rs
expression: result.output
---
                               ┌────┐
                               │User│
                               └────┘
                                  │
                                  │
                                  │
                                  ▼
                                ┌───┐
                                │CDN│
                                └───┘
                                  │
                                  │
                                  │
                                  ▼
                              ┌───────┐
                              │Browser│
                              └───────┘
                                  │
                                  │
                                  │
                                  ▼
                            ┌───────────┐
                            │API Gateway│
                            └───────────┘
                                  │
                                  │
                                  │
                                  ▼
                            ┌──────────┐
                            │App Server│
                            └──────────┘
                                  │
                                  │
       ┌─────────────────┌────────└──────┐───────────────────┐
       ▼                 ▼        │      ▼                   ▼
┌────────────┐        ┌─────┐     │  ┌───────┐        ┌─────────────┐
│Auth Service│        │Cache│     │  │Payment│        │Message Queue│
└────────────┘        └─────┘     │  └───────┘        └─────────────┘
                                  │                          │
                                  │                          │
                           ┌──────┌──────────────────────────┘
                           │      ▼
                           │  ┌──────┐
                           │  │Worker│
                           │  └──────┘
                           │      │
                           │      │
                           ┌──────└────────┐
                           ▼               ▼
                      ┌────────┐        ┌─────┐
                      │Database│        │Email│
                      └────────┘        └─────┘
