tests/snapshots/integration_tests__web_architecture_with_edge_labels.snap
---
source: tests/integration_tests.rs
expression: result.output
---
                               ┌────┐
                               │User│
                               └────┘
                                  │
                                  │
                                  │HTTPS
                                  ▼
                                ┌───┐
                                │CDN│
                                └───┘
                                  │
                                  │
                                  │static
                                  ▼
                              ┌───────┐
                              │Browser│
                              └───────┘
                                  │
                                  │
                                  │API call
                                  ▼
                            ┌───────────┐
                            │API Gateway│
                            └───────────┘
                                  │
                                  │
                                  │route
                                  ▼
                            ┌──────────┐
                            │App Server│
                            └──────────┘
                                  │
                                  │read/write
       ┌─────────validate┌────────└charge┐──enqueue──────────┐
       ▼                 ▼        │      ▼                   ▼
┌────────────┐        ┌─────┐     │pe┌───────┐        ┌─────────────┐
│Auth Service│        │Cache│     │  │Payment│        │Message Queue│
└────────────┘        └─────┘     │  └───────┘        └─────────────┘
                                  │                          │
                                  │                          │
                           ┌──────┌─────────process──────────┘
                           │      ▼
                           │  ┌──────┐
                           │  │Worker│
                           │  └──────┘
                           │      │
                           │      │
                           ┌update└─notify─┐
                           ▼               ▼
                      ┌────────┐        ┌─────┐
                      │Database│        │Email│
                      └────────┘        └─────┘
